# verily

./: .fvmrc  .gitignore  Cargo.toml  analysis_options.yaml  codemagic.yaml  deno.jsonc  devenv.nix  devenv.yaml  dprint.json  pubspec.yaml  readme.md  rust-toolchain.toml
.cursor/rules/: dart.mdc  dependencies.mdc  flutter-create-package.mdc  flutter-tests.mdc  flutter.mdc  general.mdc  git-automation.mdc  rust-welds-model-generation.mdc  rust.mdc  serverpod.mdc
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yaml  deployment-aws.yml  deployment-gcp.yml
apps/reflexy/: README.md  pubspec.yaml  readme.md  shorebird.yaml
apps/reflexy/android/app/: build.gradle.kts
apps/reflexy/android/app/src/main/: AndroidManifest.xml
apps/reflexy/android/app/src/main/kotlin/fun/verily/reflexy/reflexy/: MainActivity.kt
apps/reflexy/android/app/src/main/kotlin/pro/verily/reflexy/reflexy/: MainActivity.kt
apps/reflexy/ios/Runner/: Info.plist
apps/reflexy/ios/Runner.xcodeproj/: project.pbxproj
apps/reflexy/lib/: app.dart  main.dart  router.dart  theme.dart
apps/reflexy/lib/models/: game_action.dart
apps/reflexy/lib/providers/: game_provider.dart
apps/reflexy/lib/screens/: game_screen.dart  home_screen.dart  instructions_screen.dart
apps/reflexy/test/: widget_test.dart
apps/verily/: README.md  firebase.json  flutter_native_splash.yaml  pubspec.yaml  readme.md
apps/verily/android/app/: build.gradle.kts  google-services.json
apps/verily/android/app/src/main/: AndroidManifest.xml
apps/verily/android/app/src/main/kotlin/fun/verily/verily/verily/: MainActivity.kt
apps/verily/android/app/src/main/kotlin/pro/verily/verily/verily/: MainActivity.kt
apps/verily/ios/: Podfile
apps/verily/ios/Runner/: GoogleService-Info.plist  Info.plist
apps/verily/ios/Runner.xcodeproj/: project.pbxproj
apps/verily/ios/Runner/Base.lproj/: LaunchScreen.storyboard
apps/verily/lib/: firebase_options.dart  main.dart
apps/verily/lib/src/features/actions/: action_detail_screen.dart  actions_screen.dart
apps/verily/lib/src/features/actions/providers/: action_providers.dart
apps/verily/lib/src/features/actions/widgets/: action_list_item.dart  action_list_view.dart
apps/verily/lib/src/features/profile/screens/: profile_screen.dart
apps/verily/lib/src/features/settings/screens/: settings_screen.dart
apps/verily/lib/src/features/verification/providers/: verification_flow_provider.dart  verification_flow_provider.g.dart
apps/verily/lib/src/features/verification/screens/: verification_screen.dart
apps/verily/lib/src/features/verification/state/: verification_flow_state.dart  verification_flow_state.freezed.dart
apps/verily/lib/src/features/verification/widgets/: location_step_widget.dart  smile_step_widget.dart  speech_step_widget.dart
apps/verily/lib/src/routing/: app_router.dart
apps/verily/lib/src/screens/: home_screen.dart
apps/verily/test/: verification_flow_test.dart  widget_test.dart
apps/verily/test/features/verification/: verification_flow_test.dart
apps/verily/web/: index.html  manifest.json
apps/verily_create/: README.md  pubspec.yaml  readme.md
apps/verily_create/android/app/: build.gradle.kts
apps/verily_create/android/app/src/main/: AndroidManifest.xml
apps/verily_create/android/app/src/main/kotlin/fun/verily/verily_create/verily_create/: MainActivity.kt
apps/verily_create/android/app/src/main/kotlin/pro/verily/verily_create/verily_create/: MainActivity.kt
apps/verily_create/ios/Runner/: Info.plist
apps/verily_create/ios/Runner.xcodeproj/: project.pbxproj
apps/verily_create/lib/: main.dart
apps/verily_create/lib/app/router/: app_router.dart
apps/verily_create/lib/features/action_creation/presentation/pages/: action_list_page.dart  create_action_page.dart  edit_action_page.dart
apps/verily_create/lib/features/action_creation/presentation/widgets/: add_edit_step_dialog.dart
apps/verily_create/lib/features/auth/presentation/pages/: sign_in_page.dart
apps/verily_create/linux/: CMakeLists.txt
apps/verily_create/linux/runner/: my_application.cc
apps/verily_create/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/verily_create/macos/Runner.xcodeproj/: project.pbxproj
apps/verily_create/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/verily_create/macos/Runner/Configs/: AppInfo.xcconfig
apps/verily_create/test/: widget_test.dart
apps/verily_create/test/features/action_creation/presentation/widgets/: add_edit_step_dialog_test.dart
apps/verily_create/web/: index.html  manifest.json
apps/verily_create/windows/: CMakeLists.txt
apps/verily_create/windows/runner/: Runner.rc  main.cpp
backend/verily_backend/: Cargo.toml
backend/verily_backend/src/: lib.rs  main.rs
backend/verily_core/: Cargo.toml
backend/verily_core/src/: error.rs  lib.rs
backend/verily_db/: Cargo.toml
backend/verily_db/src/: db.rs  lib.rs  ssr_utils.rs
backend/verily_functions/: Cargo.toml
backend/verily_functions/src/: lib.rs
migrations/: 20250410044339_initial.up.sql
notes/: solana_oracle.md
setup/notes/: attestation.md  on_device_secrets.md
setup/requirements/: product_requirements.md  technical_requirements.md  ui_requirements.md
setup/tasks/: 001_reflexy_completion.md  verily.md
specs/: product_requirements.md
