[workspace]
members = [
	"crates/*",
	"programs/*",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2024"
homepage = "https://openbudget.com"
license = "Apache-2.0"
repository = "https://github.com/ifiokjr/openbudget"
rust-version = "1.85.0"

[workspace.dependencies]
aes-gcm-siv = "0.11"
anyhow = "1"
argon2 = "0.5"
assert2 = "0.3"
assert_matches = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bip32 = "0.5"
bitflags = "2"
bs58 = "0.5"
bytemuck = "1"
bytes = "1"
cfg-if = "1"
check_keyword = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
codee = "0.3"
console = "0.15"
console_error_panic_hook = "0.1"
console_log = "1"
const_str_to_pubkey = "0.2"
crossbeam-channel = "0.5"
cuid2 = "0.1"
default-env = "0.1"
deli = "0.2"
derive-where = "1"
derive_more = "2"
dotenvy = "0.15"
env_logger = "0.11"
fake = "4"
fixed = "1.29"
fixed_math = "0.4"
futures = "0.3"
futures-timeout = "0.1"
futures-timer = "3"
futures-util = "0.3"
gloo-console = "0.3"
gloo-events = "0.2"
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = "0.3"
gloo-utils = "0.2"
heck = "0.5"
hmac = "0.12"
http = "1"
hyper = "1"
idb = "0.6"
image = "0.25"
indexmap = "2"
indicatif = "0.17"
insta = "1"
js-sys = "0.3"
jsonwebtoken = "9"
lazy_static = "1"
log = "0.4"
memory_wallet = "0.1"
mime_guess = "2"
mpl-token-metadata = "5"
num_enum = "0.7"
openssl = "0.10"
oxide-auth = "0.6"
oxide-auth-axum = "0.6"
passkey = "0.4"
passkey-types = "0.4"
paste = "1"
phonenumber = "0.3"
port_check = "0.2"
rand = "0.9"
regex = "1"
reqwest = "0.12"
retrier = "0.2"
rstest = "0.25"
rust-embed = "8"
rustrict = "0.7"
send_wrapper = "0.6"
serde = "1"
serde-big-array = "0.5"
serde-wasm-bindgen = "0.6"
serde_json = "1"
serde_with = "3"
server_fn = "0.8.0-beta"
sha2 = "0.10"
similar-asserts = "1"
simple_logger = "5"
solana-address-lookup-table-program = "=2.1"
solana-client = "=2.1"
solana-config-program = "=2.1"
solana-faucet = "=2.1"
solana-package-metadata = "=2.1"
solana-program = "=2.1"
solana-program-runtime = "=2.1"
solana-program-test = "=2.1"
solana-rpc = "=2.1"
solana-sdk = "=2.1"
solana-security-txt = "1"
spl-associated-token-account = "6"
spl-memo = "6"
spl-pod = "0.5"
spl-tlv-account-resolution = "0.9"
spl-token = "7"
spl-token-2022 = "6"
spl-token-group-interface = "0.5"
spl-token-metadata-interface = "0.6"
spl-transfer-hook-interface = "0.9"
spl-type-length-value = "0.7"
sqlx = "0.8"
static_assertions = "1"
steel = { git = "https://github.com/ifiokjr/steel", rev = "1d3a37b" }
strum = "0.27"
tailwind_fuse = "0.3"
tauri = "2"
tauri-build = "2"
tauri-plugin-shell = "2"
test-log = "0.2"
test_utils_insta = "0.1"
test_utils_keypairs = "0.1"
test_utils_solana = "0.7"
thiserror = "2"
tokio = "1"
tower = "0.5"
tower-http = "0.6"
tower_governor = "0.7"
tracing = "0.1"
typed-builder = "0.21"
uint = "0.10"
url = "2"
urlencoding = "2"
uuid = "1"
validator = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasm_client_solana = "0.8"
web-sys = "0.3"
webauthn-rs = "0.5"
webauthn-rs-core = "0.5"
webauthn-rs-proto = "0.5"
welds = "0.4"

# internal crates
browser_extensions = { path = "./crates/browser_extensions", version = "0.0.0" }
openbudget_components = { path = "./crates/openbudget_components", version = "0.0.0" }
openbudget_core = { path = "./crates/openbudget_core", version = "0.0.0" }
openbudget_db = { path = "./crates/openbudget_db", version = "0.0.0" }
openbudget_functions = { path = "./crates/openbudget_functions", version = "0.0.0" }
openbudget_program = { path = "./programs/openbudget_program", version = "0.0.0" }
openbudget_program_test = { path = "./crates/openbudget_program_test", version = "0.0.0" }
openbudget_wallet = { path = "./crates/openbudget_wallet", version = "0.0.0" }
openbudget_wallet_db = { path = "./crates/openbudget_wallet_db", version = "0.0.0" }

[workspace.metadata.bin]
cargo-insta = { version = "1.42.2" }
cargo-leptos = { version = "0.2.29" }
cargo-llvm-cov = { version = "0.6.16" }
cargo-nextest = { version = "0.9.92" }
leptosfmt = { version = "0.1.33", bins = ["leptosfmt"] }
query-security-txt = { version = "1.1.1", bins = ["query-security-txt"] }
solana-verify = { version = "0.4.1", bins = ["solana-verify"] }
sqlx-cli = { version = "0.8.3", bins = ["sqlx"] }
tauri-cli = { version = "2.3.1" }
wasm-pack = { version = "0.13.1", bins = ["wasm-pack"] }
welds-cli = { version = "0.4.2", bins = ["welds"] }

[workspace.metadata.solana]
tools-version = "1.43"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release]
lto = "fat"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
# group
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }

# individual
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# group
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# individual
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
single_match_else = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
