[package]
name = "verily_functions"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
leptos = { workspace = true }
server_fn = { workspace = true }
verily_core = { workspace = true }
verily_db = { workspace = true }

[features]
reqwest = ["server_fn/reqwest"]
browser = ["server_fn/browser"]
ssr = [
	"leptos/ssr",
	"server_fn/ssr",
	"verily_core/ssr",
	"verily_db/ssr",
]

[lints]
workspace = true
